--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,4 @@ services:
     container_name: laravel-app
     ports:
       - "8000:8000"
-    volumes:
-      - .:/var/www
-    working_dir: /var/www
-    command: sh entrypoint.sh
+    restart: always
